fix annonce prof part